// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csv formatter should format data with > 1 data rows correctly 1`] = `
"Name,Customer
test-project-csv-1,test-customer-csv-1
test-project-csv-2,test-customer-csv-2
"
`;

exports[`csv formatter should format data with 0 data rows correctly 1`] = `
"Name,Customer
"
`;

exports[`csv formatter should format data with 1 data row correctly 1`] = `
"Name,Customer
test-project-csv-1,test-customer-csv-1
"
`;
